--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,7 @@ tarname      := @PACKAGE_TARNAME@
 
 # Directories
 prefix       := @prefix@
+exec_prefix  := @exec_prefix@
 bindir       := @bindir@
 srcdir       := src
 testdir      := test
