Makefile doesn't strip path of objects

--- a/Makefile.in
+++ b/Makefile.in
@@ -58,7 +58,7 @@ distclean:
 
 # Objects
 .PHONY: objects
-objects: ${notdir $(objects)}
+objects: $(objects)
 %.o: %.cpp %.hpp
 	@echo "  CXX $@"
 	@$(CXX) -c $(CXXFLAGS) $< -o $@
