Use configure to set srcdir and testdir

--- a/Makefile.in
+++ b/Makefile.in
@@ -9,8 +9,8 @@ tarname      := @PACKAGE_TARNAME@
 prefix       := @prefix@
 exec_prefix  := @exec_prefix@
 bindir       := @bindir@
-srcdir       := src
-testdir      := test
+srcdir       := @srcdir@
+testdir      := @testdir@
 libdir       := @libdir@
 includedir   := @includedir@
 VPATH        := $(srcdir) $(testdir)
