Fixed building tests in Makefile
 - Objects already have "build/" prefix when not building from scratch
 - Cannot just add it directly
 - Have to use notdir function first

--- a/Makefile.in
+++ b/Makefile.in
@@ -70,7 +70,7 @@ tests: $(tests)
 	@$(CXX) \
             $(CXXFLAGS) $(LDFLAGS) \
             $< -o $(builddir)/$@ \
-            ${addprefix $(builddir)/,${filter %.o,$^}} \
+            ${addprefix build/,${notdir ${filter %.o,$^}}} \
             $(LIBS)
 
 # Dependencies
