--- a/Makefile.in
+++ b/Makefile.in
@@ -46,26 +46,26 @@ depends      := ${subst .o,.d,$(objects)} ${addsuffix .d,$(tests)}
 library      := lib$(tarname).so.0.1.1
 
 # Interface
-.PHONY: all clean distclean
+.PHONY: all clean distclean maintainer-clean
 .DEFAULT: all
 all: objects tests library
 clean:
-	@echo "  RM    build"
-	@$(RM) -r $(builddir)
-	@echo "  RM    $(library)"
-	@$(RM) $(library)
-distclean:
-	@echo "  RM    autoscan files"
-	@$(RM) autoscan.log
-	@$(RM) configure.scan
-	@echo "  RM    configure files"
-	@$(RM) aclocal.m4
-	@$(RM) -r autom4te.cache
-	@$(RM) config.h
-	@$(RM) config.log
-	@$(RM) config.status
-	@$(RM) config.sub
-	@$(RM) Makefile
+	$(RM) -r $(builddir)
+distclean: clean
+	$(RM) config.h
+	$(RM) config.log
+	$(RM) config.status
+	$(RM) Makefile
+maintainer-clean: distclean
+	$(RM) aclocal.m4
+	$(RM) -r autom4te.cache
+	$(RM) autoscan.log
+	$(RM) configure.scan
+	$(RM) config.guess
+	$(RM) config.h.in
+	$(RM) config.sub
+	$(RM) configure
+	$(RM) install-sh
 
 # Objects
 .PHONY: objects
