Configure substitutes major/minor version

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,10 @@ AC_CONFIG_HEADERS([config.h])
 AC_LANG([C++])
 AC_CANONICAL_HOST
 
+# Additional version information
+AC_SUBST([PACKAGE_MAJOR_VERSION], MY_MAJOR_VERSION)
+AC_SUBST([PACKAGE_MINOR_VERSION], MY_MINOR_VERSION)
+
 # Checks for programs
 AC_PROG_CXX
 AC_PROG_INSTALL
