--- a/Makefile.in
+++ b/Makefile.in
@@ -17,12 +17,15 @@ myincludedir := $(includedir)/$(tarname)
 srcdir       := src
 testdir      := test
 builddir     := build
-srcmods      := $(srcdir)/ \
-                ${filter %/,${wildcard $(srcdir)/*/}} \
-                ${filter %/,${wildcard $(srcdir)/*/*/}}
-testmods     := $(testdir)/ \
-                ${filter %/,${wildcard $(testdir)/*/}} \
-                ${filter %/,${wildcard $(testdir)/*/*/}}
+exclusions   := ${addsuffix /,@EXCLUSIONS@}
+srcmods      := ${filter-out ${addprefix $(srcdir)/,$(exclusions)}, \
+                    $(srcdir)/ \
+                    ${filter %/,${wildcard $(srcdir)/*/}} \
+                    ${filter %/,${wildcard $(srcdir)/*/*/}}}
+testmods     := ${filter-out ${addprefix $(testdir)/,$(exclusions)}, \
+                    $(testdir)/ \
+                    ${filter %/,${wildcard $(testdir)/*/}} \
+                    ${filter %/,${wildcard $(testdir)/*/*/}}}
 VPATH        := $(srcdir) $(testdir) $(builddir) $(srcmods) $(testmods)
 
 # Tools
