Exclude cocoa when building w/ GLX backend

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,8 @@ fi
 # Set up exclusions
 if test "$host_vendor" = 'apple'; then
     AC_SUBST([EXCLUSIONS], [window/glx])
+else
+    AC_SUBST([EXCLUSIONS], [window/cocoa])
 fi
 
 # Finish
