Don't generate dependencies for other cleans
 - Previously would not generate dependencies for clean
 - Now doesn't do it for distclean and maintainer-clean too

--- a/Makefile.in
+++ b/Makefile.in
@@ -151,6 +151,6 @@ $(builddir)/%.d: %.cxx
             | sed 's|\.hpp|\.lo|g' \
             | sed 's|[[:alnum:]/]*/||g' \
             > $@
-ifneq ($(MAKECMDGOALS),clean)
+ifneq (clean,${findstring clean,$(MAKECMDGOALS)})
   -include ${addprefix $(builddir)/,$(depends)}
 endif
