--- a/Makefile.in
+++ b/Makefile.in
@@ -21,16 +21,18 @@ exclusions   := ${addsuffix /,@EXCLUSIONS@}
 srcmods      := ${filter-out ${addprefix $(srcdir)/,$(exclusions)}, \
                     $(srcdir)/ \
                     ${filter %/,${wildcard $(srcdir)/*/}} \
-                    ${filter %/,${wildcard $(srcdir)/*/*/}}}
+                    ${filter %/,${wildcard $(srcdir)/*/*/}} \
+                    ${filter %/,${wildcard $(srcdir)/*/*/*/}}}
 testmods     := ${filter-out ${addprefix $(testdir)/,$(exclusions)}, \
                     $(testdir)/ \
                     ${filter %/,${wildcard $(testdir)/*/}} \
-                    ${filter %/,${wildcard $(testdir)/*/*/}}}
+                    ${filter %/,${wildcard $(testdir)/*/*/}} \
+                    ${filter %/,${wildcard $(testdir)/*/*/*/}}}
 VPATH        := $(srcdir) $(testdir) $(builddir) $(srcmods) $(testmods)
 
 # Tools
 CXX          := @CXX@
-INCLUDES     := -I./ -I$(srcdir)/ ${addprefix -I,$(srcmods)}
+INCLUDES     := -I./ -I$(srcdir)/
 DEFS         := @DEFS@
 CPPFLAGS     := @CPPFLAGS@
 CXXFLAGS     := @CXXFLAGS@ $(DEFS) $(INCLUDES)
