--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ define([MY_EMAIL], [adb1413@rit.edu])
 AC_INIT(MY_NAME, MY_VERSION, MY_EMAIL)
 AC_SUBST([PACKAGE_MAJOR_VERSION], MY_MAJOR_VERSION)
 AC_SUBST([PACKAGE_MINOR_VERSION], MY_MINOR_VERSION)
-AC_CONFIG_SRCDIR([src/ggl/ggl_common.h])
+AC_CONFIG_SRCDIR([src/ggl/common.h])
 AC_CONFIG_HEADERS([config.h])
 
 # Check for system
