--- a/Makefile.in
+++ b/Makefile.in
@@ -91,6 +91,7 @@ tests: $(tests)
 	@libtool --mode=link --quiet \
         $(CXX) \
         $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) \
+        -DGGL_TEST_FIXTURE=$@ \
         $< -o $(builddir)/$@ \
         ${addprefix $(builddir)/,${notdir ${filter %.lo,$^}}} \
         $(LIBS)
