--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,8 @@ define([MY_MAJOR_VERSION], [0])
 define([MY_MINOR_VERSION], [1])
 define([MY_VERSION], MY_MAJOR_VERSION.MY_MINOR_VERSION)
 define([MY_EMAIL], [adb1413@rit.edu])
-AC_INIT(MY_NAME, MY_VERSION, MY_EMAIL)
+define([MY_URL], [http://github.com/adbrown85/ggl])
+AC_INIT(MY_NAME, MY_VERSION, MY_EMAIL, , MY_URL)
 AC_SUBST([PACKAGE_MAJOR_VERSION], MY_MAJOR_VERSION)
 AC_SUBST([PACKAGE_MINOR_VERSION], MY_MINOR_VERSION)
 AC_CONFIG_SRCDIR([src/ggl/common.h])
