--- a/Makefile.in
+++ b/Makefile.in
@@ -33,7 +33,7 @@ pkgcfgdir    := $(libdir)/pkgconfig
 
 # Tools
 CXX          := @CXX@
-INCLUDES     := -I$(srcdir)/ -I$(testdir)/
+INCLUDES     := -I./ -I$(srcdir)/ -I$(testdir)/
 DEFS         := @DEFS@
 CPPFLAGS     := @CPPFLAGS@
 DEPS_CFLAGS  := @DEPS_CFLAGS@
@@ -60,10 +60,10 @@ all: objects tests library
 clean:
 	$(RM) -r $(builddir)
 distclean: clean
+	$(RM) config.h
 	$(RM) config.log
 	$(RM) config.status
 	$(RM) Makefile
-	$(RM) src/ggl/config.h
 	$(RM) $(pkgcfgfile)
 maintainer-clean: distclean
 	$(RM) aclocal.m4
@@ -71,13 +71,13 @@ maintainer-clean: distclean
 	$(RM) autoscan.log
 	$(RM) configure.scan
 	$(RM) config.guess
+	$(RM) config.h.in
+	$(RM) config.h.in~
 	$(RM) config.sub
 	$(RM) configure
 	$(RM) install-sh
 	$(RM) libtool
 	$(RM) ltmain.sh
-	$(RM) src/ggl/config.h.in
-	$(RM) src/ggl/config.h.in~
 
 # Objects
 .PHONY: objects
