Moved config.h back to root directory
 - Window package uses config.h in root directory

--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ AC_INIT(MY_NAME, MY_VERSION, MY_EMAIL)
 AC_SUBST([PACKAGE_MAJOR_VERSION], MY_MAJOR_VERSION)
 AC_SUBST([PACKAGE_MINOR_VERSION], MY_MINOR_VERSION)
 AC_CONFIG_SRCDIR([src/ggl/common.h])
-AC_CONFIG_HEADERS([src/ggl/config.h])
+AC_CONFIG_HEADERS([config.h])
 
 # Check for system
 AC_CANONICAL_HOST
