--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ aclocal.m4
 autom4te.cache/
 autoscan.log
 config.guess
+config.h
+config.h.in
+config.h.in~
 config.sub
 config.log
 config.status
@@ -18,6 +21,3 @@ install-sh
 Makefile
 libggl.so.*
 ltmain.sh
-src/ggl/config.h
-src/ggl/config.h.in
-src/ggl/config.h.in~
