--- a/Makefile.in
+++ b/Makefile.in
@@ -32,7 +32,7 @@ VPATH        := $(srcdir) $(testdir) $(builddir) $(srcmods) $(testmods)
 
 # Tools
 CXX          := @CXX@
-INCLUDES     := -I$(srcdir)/ -I$(testdir)/
+INCLUDES     := -I./ -I$(srcdir)/ -I$(testdir)/
 DEFS         := @DEFS@
 CPPFLAGS     := @CPPFLAGS@
 CXXFLAGS     := @CXXFLAGS@ $(DEFS) $(INCLUDES)
@@ -56,23 +56,23 @@ all: objects tests library
 clean:
 	$(RM) -r $(builddir)
 distclean: clean
+	$(RM) config.h
 	$(RM) config.log
 	$(RM) config.status
 	$(RM) Makefile
-	$(RM) src/ggl/config.h
 maintainer-clean: distclean
 	$(RM) aclocal.m4
 	$(RM) -r autom4te.cache
 	$(RM) autoscan.log
 	$(RM) configure.scan
 	$(RM) config.guess
+	$(RM) config.h.in
+	$(RM) config.h.in~
 	$(RM) config.sub
 	$(RM) configure
 	$(RM) install-sh
 	$(RM) libtool
 	$(RM) ltmain.sh
-	$(RM) src/ggl/config.h.in
-	$(RM) src/ggl/config.h.in~
 
 # Objects
 .PHONY: objects
