Fixed files for rename to 'wistful'
 - Fixed package-config file
 - Fixed up configure.ac
 - Fixed up Doxyfile
 - Moved sources and tests under wistful directory
 - Fixed sources and tests files for rename
 - Fixed .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ config.log
 config.status
 configure
 configure.scan
-ggl.pc
+wistful.pc
 doc/
 install-sh
 Makefile
-libggl.so.*
+libwistful.so.*
 ltmain.sh
